cookie non funzionano

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
 <script src="https://www.google.com/recaptcha/api.js?render=6Lf0HfMqAAAAANou-wuqhN_X4NJpQfH7BtaoWnIf"></script>
 
-<!--cookies  -->
+<!--cookies
 <script src="https://web.cmp.usercentrics.eu/modules/autoblocker.js"></script>
 <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="TeewT5yBit08E9" async></script>
-
+  -->
 
 </head>
 
