--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link href="css/bootstrap-icons.css" rel="stylesheet" type="text/css" />
 
 <!--== animate -->
-<link href="css/animate.css" rel="stylesheet" type="text/css" />
+<link href="css/animate.css?v=3" rel="stylesheet" type="text/css" />
 
 <!--== magnific-popup -->
 <link href="css/magnific-popup.css" rel="stylesheet" type="text/css" />
@@ -45,13 +45,13 @@
 <link href="css/shortcodes.css?v=2" rel="stylesheet" type="text/css" />
 
 <!--== default-theme -->
-<link href="css/style.css" rel="stylesheet" type="text/css" />
+<link href="css/style.css?v=3" rel="stylesheet" type="text/css" />
 
 <!--== modifiche -->
 <link href="css/modifiche.css?v=2" rel="stylesheet" type="text/css" />
 
 <!--== responsive -->
-<link href="css/responsive.css?v=4" rel="stylesheet" type="text/css" />
+<link href="css/responsive.css?v=5" rel="stylesheet" type="text/css" />
 
 <!-- inject css end -->
 
@@ -226,7 +226,7 @@
       <div class="col-lg-6 col-md-12">
         <div class="white-bg rounded box-shadow">
           <div class="theme-title p-5 mb-0">
-          <h4>Cos'è Gestione Clienti?</h4>
+          <h4 style="display: inline;">Cos'è Gestione Clienti?</h4>
           <h2>Controllo completo, gestione senza fatica</h2>
         </div>
         <img class="img-fluid rounded" src="images/cine.jpg" alt="">
